Blank cell converts to null also for strings